stg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-stg
  namespace: stg
  labels:
    app: my-golang-stg
    release: beta
spec:
  selector:
    matchLabels:
      project: golang
  template:
    metadata:
      labels:
        project: golang
    spec:
      containers:
        - name: golang-web
          image: docker.io/marina1327/task-01:stg-1.28.7 # {"$imagepolicy": "flux-system:stg"}
          ports:
            - containerPort: 8080
