stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-stg
  namespace: stg
  labels:
    name: my-ingress-stg
spec:
  ingressClassName: nginx
  rules:
  - host: stg-m.int.itoutposts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-pod-service  
            port: 
              number: 80
